--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@
  - (tim) Fix typo. s/SETEIUD_BREAKS_SETUID/SETEUID_BREAKS_SETUID/
  - (tim) [configure.ac] Bug 665: move 3 new AC_DEFINES outside of AC_TRY_RUN.
    Report by distler AT golem ph utexas edu.
+ - (dtucker) [contrib/aix/pam.conf] Include example pam.conf for AIX from
+   article by genty at austin.ibm.com, included with the author's permission.
 
 20030919
  - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
