--- a/ChangeLog
+++ b/ChangeLog
@@ -71,6 +71,8 @@
    - markus@cvs.openbsd.org 2003/09/19 17:43:35
      [clientloop.c sshtty.c sshtty.h]
      remove fatal callbacks from client code; ok deraadt
+ - (bal) "extration" -> "extraction" in ssh-rand-helper.c; repoted by john
+	on #unixhelp@efnet
 
 20030919
  - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
