--- a/ChangeLog
+++ b/ChangeLog
@@ -73,6 +73,7 @@
      remove fatal callbacks from client code; ok deraadt
  - (bal) "extration" -> "extraction" in ssh-rand-helper.c; repoted by john
 	on #unixhelp@efnet
+ - (tim) [configure.ac] add --disable-etc-default-login option. ok djm
 
 20030919
  - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
