- (dtucker) [configure.ac openbsd-compat/xcrypt.c] Bug #633: Remove    DISABLE_SHADOW for HP-UX, use getspnam instead of getprpwnam.  Patch from    michael_steffens at hp.com, ok djm@

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20030925
+ - (dtucker) [configure.ac openbsd-compat/xcrypt.c] Bug #633: Remove
+   DISABLE_SHADOW for HP-UX, use getspnam instead of getprpwnam.  Patch from
+   michael_steffens at hp.com, ok djm@
+
 20030924
  - (djm) Update version.h and spec files for HEAD
  - (dtucker) [configure.ac] IRIX5 needs the same setre[ug]id defines as IRIX6.
