--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,8 @@
  - (dtucker) [configure.ac] Don't set DISABLE_SHADOW when configuring
    --with-pam.  ok djm@
  - (dtucker) [ssh-gss.h] Prototype change missed in sync.
+ - (dtucker) [session.c] Fix bus errors on some 64-bit Solaris configurations.
+   Based on patches by Matthias Koeppe and Thomas Baden.  ok djm@
 
 20030930
  - (bal) Fix issues in openbsd-compat/realpath.c
