--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20031007
+ - (djm) Delete autom4te.cache after autoreconf
+
 20031003
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/10/02 10:41:59
