--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
    cleanup functions.  With & ok djm@
 
 20031003
- - OpenBSD CVS Sync
+ - (dtucker) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/10/02 10:41:59
      [sshd.c]
      print openssl version, too, several requests; ok henning/djm.
@@ -15,7 +15,7 @@
    option.
 
 20031002
- - OpenBSD CVS Sync
+ - (dtucker) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/09/23 20:17:11
      [Makefile.in auth1.c auth2.c auth.c auth.h auth-krb5.c canohost.c
      cleanup.c clientloop.c fatal.c gss-serv.c log.c log.h monitor.c monitor.h
