--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    run-time switch, always build --with-md5-passwords.
  - (dtucker) [configure.ac openbsd-compat/Makefile.in openbsd-compat/strtoul.c]
    Bug #670: add strtoul() to openbsd-compat for platforms lacking it.  ok djm@
+ - (dtucker) [configure.ac] Bug #715: Set BROKEN_SETREUID and BROKEN_SETREGID
+   on Reliant Unix.  Patch from Robert.Dahlem at siemens.com.
 
 20031003
  - (dtucker) OpenBSD CVS Sync
