--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,9 @@
    - markus@cvs.openbsd.org 2003/10/14 19:54:39
      [session.c ssh-agent.c]
      10X for mkdtemp; djm@
+ - (dtucker) [acconfig.h configure.ac dns.c openbsd-compat/getrrsetbyname.c
+   openbsd-compat/getrrsetbyname.h] DNS fingerprint support is now always
+   compiled in but disabled in config.
 
 20031009
  - (dtucker) [sshd_config.5] UsePAM defaults to "no".  ok djm@
