--- a/INSTALL
+++ b/INSTALL
@@ -130,7 +130,8 @@ need the S/Key libraries and header files installed for this to work.
 support. You will need libwrap.a and tcpd.h installed.
 
 --with-md5-passwords will enable the use of MD5 passwords. Enable this
-if your operating system uses MD5 passwords without using PAM.
+if your operating system uses MD5 passwords.  The resulting binary will
+support both MD5 and traditional crypt type passwords.
 
 --with-utmpx enables utmpx support. utmpx support is automatic for 
 some platforms.
