--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20031021
+ - (dtucker) [INSTALL] Some system crypt() functions support MD5 passwords
+   directly.  Noted by Darren.Moffat at sun.com.
+
 20031017
  - (dtucker) [INSTALL] Note that --with-md5 is now required on platforms with
    MD5 passwords even if PAM support is enabled.  From steev at detritus.net.
