--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20031103
+ - (dtucker) [contrib/cygwin/ssh-host-config] Ensure entries in /etc/services
+   are created correctly with CRLF line terminations.  Patch from vinschen at
+   redhat.com.
+
 20031021
  - (dtucker) [INSTALL] Some system crypt() functions support MD5 passwords
    directly.  Noted by Darren.Moffat at sun.com.
