--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
    - markus@cvs.openbsd.org 2003/11/02 11:01:03
      [auth2-gss.c compat.c compat.h sshconnect2.c]
      remove support for SSH_BUG_GSSAPI_BER; simon@sxw.org.uk
+ - (dtucker) [regress/agent-ptrace.sh] Use numeric uid and gid.
 
 20031021
  - (dtucker) [INSTALL] Some system crypt() functions support MD5 passwords
