--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20031113
+ - (dtucker) [auth-pam.c] Append newlines to lines output by the
+   pam_chauthtok_conv().
+
 20031106
  - (djm) Clarify UsePAM consequences a little more
 
