--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
 20031113
  - (dtucker) [auth-pam.c] Append newlines to lines output by the
    pam_chauthtok_conv().
+ - (dtucker) [README ssh-host-config ssh-user-config Makefile] (All
+   contrib/cygwin).  Major update from vinschen at redhat.com.
+   - Makefile provides a `cygwin-postinstall' target to run right after
+     `make install'.
+   - Better support for Windows 2003 Server.
+   - Try to get permissions as correct as possible.
+   - New command line options to allow full automated host configuration.
+   - Create configs from skeletons in /etc/defaults/etc.
+   - Use /bin/bash, allows reading user input with readline support.
+   - Remove really old configs from /usr/local.
 
 20031106
  - (djm) Clarify UsePAM consequences a little more
