--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
-20031117
+20031118
  - (djm) Fix early exit for root auth success when UsePAM=yes and 
    PermitRootLogin=no
+ - (dtucker) [auth-pam.c] Convert chauthtok_conv into a generic tty_conv,
+   and use it for do_pam_session.  Fixes problems like pam_motd not displaying
+   anything.  ok djm@
 
 20031117
  - (djm) OpenBSD CVS Sync
