--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20031122
+ - (dtucker) [channels.c] Make AIX write limit code clearer.  Suggested by djm@
+
 20031121
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/11/20 11:39:28
