--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
    Use permanently_set_uid for SIA, only define DISABLE_FD_PASSING when SIA
    is enabled, rely on SIA to check for locked accounts if enabled.  ok djm@
  - (djm) [scp.c] Rename limitbw -> limit_rate to match upstreamed patch
+ - (djm) [sftp-int.c] Remove duplicated code from bogus sync
 
 20031121
  - (djm) OpenBSD CVS Sync
