--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,8 @@
  - (dtucker) [acconfig.h configure.ac uidswap.c] Bug #645: Check for
    setres[ug]id() present but not implemented (eg some Linux/glibc
    combinations).
+ - (bal) [openbsd-compat/bsd-misc.c] unset 'signal' defined if we are
+   using a real 'signal()' (Noticed by a NeXT Compile)
 
 20031209
  - (dtucker) OpenBSD CVS Sync
