--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20031218
+ - (dtucker) [configure.ac] Don't use setre[ug]id on DG-UX, from Tom Orban.
+
 20031217
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/12/09 15:28:43
