--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20031219
+ - (dtucker) [defines.h] Bug #458: Define SIZE_T_MAX as UINT_MAX if we
+   typedef size_t ourselves.
+
 20031218
  - (dtucker) [configure.ac] Don't use setre[ug]id on DG-UX, from Tom Orban.
  - (dtucker) [auth-pam.c] Do PAM chauthtok during SSH2 keyboard-interactive
