--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
      [auth2-passwd.c]
      Ignore password change request during password auth (which we currently
      don't support) and discard proposed new password.  corrections/ok markus@
+ - (dtucker) [configure.ac] Only test setresuid and setresgid if they exist.
 
 20031219
  - (dtucker) [defines.h] Bug #458: Define SIZE_T_MAX as UINT_MAX if we
