--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040102
+ - (djm) OSX/Darwin needs BIND_8_COMPAT to build getrrsetbyname. Report from
+   jakob@
+
 20031231
  - (dtucker) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2003/12/22 09:16:58
