- (dtucker) [auth-pam.c] Add minor debugging.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    unexpectedly.  with & ok djm@
  - (dtucker) [auth-pam.c] Reset signal handler in pthread_cancel too, add
    test for case where cleanup has already run.
+ - (dtucker) [auth-pam.c] Add minor debugging.
 
 20040113
  - (dtucker) [auth-pam.c] Relocate struct pam_ctxt and prototypes.  No
