--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040122
+ - (dtucker) [configure.ac] Use krb5-config where available for Kerberos/
+   GSSAPI detection, libs and includes.  ok djm@
+
 20040121
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2004/01/13 09:25:05
