- (dtucker) [session.c] Enable AFS support in conjunction with KRB5 not    just HEIMDAL.
Currently this will make no difference, as only Heimdal (which defines KRB5
anyway) has libkafs, however a libkafs that works with MIT may become
available.  In that case it will be used too.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20040122
  - (dtucker) [configure.ac] Use krb5-config where available for Kerberos/
    GSSAPI detection, libs and includes.  ok djm@
+ - (dtucker) [session.c] Enable AFS support in conjunction with KRB5 not
+   just HEIMDAL.
 
 20040121
  - (djm) OpenBSD CVS Sync
