--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20040123 
  - (djm) Do pam_session processing for systems with HAVE_LOGIN_CAP; from 
    ralf.hack AT pipex.net; ok dtucker@
+ - (djm) Bug #776: Update contrib/redhat/openssh.spec to dynamically detect
+   Kerberos location (and thus work with Fedora Core 1);
+   from jason AT devrandom.org
 
 20040122
  - (dtucker) [configure.ac] Use krb5-config where available for Kerberos/
