--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    from jason AT devrandom.org
  - (dtucker) [configure.ac] Bug #788: Test for zlib.h presence and for
    zlib >= 1.1.4.  Partly from jbasney at ncsa.uiuc.edu.  ok djm@
+ - (dtucker) [contrib/cygwin/README] Document new ssh-host-config options.
+   Patch from vinschen at redhat.com.
 
 20040122
  - (dtucker) [configure.ac] Use krb5-config where available for Kerberos/
