--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20040124
+ - (djm) Typo in openbsd-compat/bsd-openpty.c; from wendyp AT cray.com
+
 20040123 
  - (djm) Do pam_session processing for systems with HAVE_LOGIN_CAP; from 
    ralf.hack AT pipex.net; ok dtucker@
