--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20040126
  - (tim) Typo in regress/README.regress
+ - (tim) [regress/test-exec.sh] RhostsAuthentication is deprecated.
 
 20040124
  - (djm) Typo in openbsd-compat/bsd-openpty.c; from wendyp AT cray.com
