--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (tim) Typo in regress/README.regress
  - (tim) [regress/test-exec.sh] RhostsAuthentication is deprecated.
  - (tim) [defines.h] Add defines for HFIXEDSZ and T_SIG
+ - (tim) [configure.ac includes.h] add <sys/ptms.h> for grantpt() and friends.
 
 20040124
  - (djm) Typo in openbsd-compat/bsd-openpty.c; from wendyp AT cray.com
