--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  - (tim) [regress/test-exec.sh] RhostsAuthentication is deprecated.
  - (tim) [defines.h] Add defines for HFIXEDSZ and T_SIG
  - (tim) [configure.ac includes.h] add <sys/ptms.h> for grantpt() and friends.
+ - (tim) [defines.h openbsd-compat/getrrsetbyname.h] Move defines for HFIXEDSZ
+   and T_SIG to getrrsetbyname.h
 
 20040124
  - (djm) Typo in openbsd-compat/bsd-openpty.c; from wendyp AT cray.com
