--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
      [sftp-batch.sh]
  - (dtucker) [configure.ac] Add --without-zlib-version-check.  Feedback from
    tim@, ok several
+ - (dtucker) [configure.ac openbsd-compat/bsd-cray.c openbsd-compat/bsd-cray.h]
+   Bug #775: Cray fixes from wendy at cray.com
 
 20040128
  - (dtucker) [regress/README.regress] Add tcpwrappers issue, noted by tim@
