--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20040206
+ - (dtucker) [acss.c acss.h] Fix $Id tags.
+
 20040129
  - (dtucker) OpenBSD CVS Sync regress/
    - dtucker@cvs.openbsd.org 2003/10/11 11:49:49
