--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 20040206
  - (dtucker) [acss.c acss.h] Fix $Id tags.
+ - (dtucker) [cipher-acss.c cipher.c] Enable acss only if building with
+   OpenSSL >= 0.9.7.  ok djm@
 
 20040129
  - (dtucker) OpenBSD CVS Sync regress/
