--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (dtucker) [acss.c acss.h] Fix $Id tags.
  - (dtucker) [cipher-acss.c cipher.c] Enable acss only if building with
    OpenSSL >= 0.9.7.  ok djm@
+ - (dtucker) [session.c] Bug #789: Do not call do_pam_setcred as a non-root
+   user, since some modules might fail due to lack of privilege.  ok djm@
 
 20040129
  - (dtucker) OpenBSD CVS Sync regress/
