--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    OpenSSL >= 0.9.7.  ok djm@
  - (dtucker) [session.c] Bug #789: Do not call do_pam_setcred as a non-root
    user, since some modules might fail due to lack of privilege.  ok djm@
+ - (dtucker) [configure.ac] Bug #748: Always define BROKEN_GETADDRINFO
+   for HP-UX 11.11.  If there are known-good configs where this is not
+   required, please report them.  ok djm@
 
 20040129
  - (dtucker) OpenBSD CVS Sync regress/
