--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
  - (dtucker) [configure.ac] Bug #748: Always define BROKEN_GETADDRINFO
    for HP-UX 11.11.  If there are known-good configs where this is not
    required, please report them.  ok djm@
+ - (dtucker) [sshd.c] Bug #757: Clear child's environment to prevent
+   accidentally inheriting from root's environment.  ok djm@
 
 20040129
  - (dtucker) OpenBSD CVS Sync regress/
