--- a/ChangeLog
+++ b/ChangeLog
@@ -9,9 +9,9 @@
    required, please report them.  ok djm@
  - (dtucker) [sshd.c] Bug #757: Clear child's environment to prevent
    accidentally inheriting from root's environment.  ok djm@
- - (dtucker) [openbsd-compat/port-aix.c openbsd-compat/port-aix.h] Restore
-   previous authdb setting after auth calls.  Fixes problems with setpcred
-   failing on accounts that use AFS or NIS password registries.
+ - (dtucker) [openbsd-compat/port-aix.c openbsd-compat/port-aix.h] Bug #796:
+   Restore previous authdb setting after auth calls.  Fixes problems with
+   setpcred failing on accounts that use AFS or NIS password registries.
 
 20040129
  - (dtucker) OpenBSD CVS Sync regress/
