--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20040210
+ - (dtucker) [auth-passwd.c auth.h openbsd-compat/port-aix.c
+    openbsd-compat/port-aix.h] Bug #14: Use do_pwchange to support AIX's
+    native password expiry.
+
 20040207
  - (dtucker) OpenBSD CVS Sync
    - dtucker@cvs.openbsd.org 2004/02/06 23:41:13
