--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20040211
  - (dtucker) [auth-passwd.c auth-shadow.c] Only enable shadow expiry check
    if HAS_SHADOW_EXPIRY is set.
+ - (tim) [configure.ac] Fix comment to match code changes in ver 1.117
 
 20040210
  - (dtucker) [auth-passwd.c auth.h openbsd-compat/port-aix.c
