--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
      switch to license.template for code written by me (belated, I know...)
  - (djm) Bug #698: Specify FILE: for KRB5CCNAME; patch from 
    stadal@suse.cz and simon@sxw.org.uk
+ - (dtucker) [auth-pam.c] Tidy up PAM debugging.  ok djm@
 
 20040212
  - (tim) [Makefile.in regress/sftp-badcmds.sh regress/test-exec.sh]
