--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
      [sshd_config.5]
      remove cruft left over from RhostsAuthentication removal;
      ok markus@
+ - (djm) [log.c] Correct use of HAVE_OPENLOG_R
 
 20040217
  - (djm) Simplify the license on code I have written. No code changes.
