--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
      remove cruft left over from RhostsAuthentication removal;
      ok markus@
  - (djm) [log.c] Correct use of HAVE_OPENLOG_R
+ - (djm) [log.c] Tighten openlog_r tests
 
 20040217
  - (djm) Simplify the license on code I have written. No code changes.
