- (djm) [openbsd-compat/setproctitle.c] fix comments; from grange@

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20040220
+ - (djm) [openbsd-compat/setproctitle.c] fix comments; from grange@
+
 20040218
  - (dtucker) [configure.ac] Handle case where krb5-config --libs returns a
    path with a "-" in it.  From Sergio.Gelato at astro.su.se.
