--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040222
+ - (dtucker) [auth-shadow.c auth.c auth.h] Move shadow account expiry test
+   to auth-shadow.c, no functional change.  ok djm@
+
 20040220
  - (djm) [openbsd-compat/setproctitle.c] fix comments; from grange@
 
