--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@
    holger AT van-lengerich.de and openssh_bugzilla AT hockin.org
  - (dtucker) [uidswap.c] Minor KNF.  ok djm@
  - (tim) [openbsd-compat/getrrsetbyname.c] Make gcc 2.7.2.3 happy.  ok djm@
+ - (djm) Crank RPM spec versions
 
 20040223
  - (dtucker) [session.c] Bug #789: Only make setcred call for !privsep in the
