--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
  - (dtucker) [uidswap.c] Minor KNF.  ok djm@
  - (tim) [openbsd-compat/getrrsetbyname.c] Make gcc 2.7.2.3 happy.  ok djm@
  - (djm) Crank RPM spec versions
+ - (dtucker) [README] Add pointer to release notes.  ok djm@
 
 20040223
  - (dtucker) [session.c] Bug #789: Only make setcred call for !privsep in the
