--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+See:
+http://www.openssh.com/txt/release-3.8 for the release notes.
+
 - A Japanese translation of this document and of the OpenSSH FAQ is
 - available at http://www.unixuser.org/~haruyama/security/openssh/index.html
 - Thanks to HARUYAMA Seigo <haruyama@unixuser.org>
