--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@
  - (tim) [openbsd-compat/getrrsetbyname.c] Make gcc 2.7.2.3 happy.  ok djm@
  - (djm) Crank RPM spec versions
  - (dtucker) [README] Add pointer to release notes.  ok djm@
+ - (dtucker) {README.platform] Add platform-specific notes.
 
 20040223
  - (dtucker) [session.c] Bug #789: Only make setcred call for !privsep in the
