--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@
  - (djm) Crank RPM spec versions
  - (dtucker) [README] Add pointer to release notes.  ok djm@
  - (dtucker) {README.platform] Add platform-specific notes.
+ - (tim) [configure.ac] SCO3 needs -lcrypt_i for -lprot
 
 20040223
  - (dtucker) [session.c] Bug #789: Only make setcred call for !privsep in the
