--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040226
+ - (bal) KNF our sshlogin.c even if the code looks nothing like upstream
+   code due to diversity issues.
+
 20040225
  - (djm) Trim ChangeLog 
  - (djm) Don't specify path to PAM modules in Redhat sshd.pam; from Fedora
