--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,8 @@
    - dtucker@cvs.openbsd.org 2004/02/28 13:44:45
      [regress/try-ciphers.sh]
      Test acss too; ok markus@
+ - (dtucker) [regress/try-ciphers.sh] Skip acss if not compiled in (eg if we
+   built with openssl < 0.9.7)
 
 20040226
  - (bal) KNF our sshlogin.c even if the code looks nothing like upstream
