--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040304
+ - (dtucker) [auth-pam.c] Don't try to export PAM when compiled with
+   -DUSE_POSIX_THREADS.  From antoine.verheijen at ualbert ca.  ok djm@
+
 20040303
  - (djm) [configure.ac ssh-agent.c] Use prctl to prevent ptrace on ssh-agent
    ok dtucker  
