--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20040304
  - (dtucker) [auth-pam.c] Don't try to export PAM when compiled with
    -DUSE_POSIX_THREADS.  From antoine.verheijen at ualbert ca.  ok djm@
+ - (dtucker) [auth-pam.c] Reset signal status when starting pam auth thread,
+   prevent hanging during PAM keyboard-interactive authentications.  ok djm@
 
 20040303
  - (djm) [configure.ac ssh-agent.c] Use prctl to prevent ptrace on ssh-agent
