--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040308
+ - (dtucker) [sshd.c] Back out rev 1.270 as it caused problems on some
+   platforms (eg SCO, HP-UX) with logging in the wrong TZ.
+
 20040307
  - (tim) [regress/login-timeout.sh] fix building outside of source tree.
 
