--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
    - markus@cvs.openbsd.org 2004/03/20 10:40:59
      [version.h]
      3.8.1
+ - (djm) Crank RPM spec versions
 
 20040311
  - (djm) [configure.ac] Add standard license to configure.ac; ok ben, dtucker
