--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040327
+ - (dtucker) [session.c] Bug #817: Clear loginmsg after fork to prevent
+   duplicate login messages for mutli-session logins.  ok djm@
+
 20040322
  - (djm) [sshd.c] Drop supplemental groups if started as root
  - (djm) OpenBSD CVS Sync
