--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20040330
  - (dtucker) [configure.ac] Bug #811: Use "!" for LOCKED_PASSWD_PREFIX on
    Linuxes, since that's what many use.  ok djm@
+ - (dtucker) [auth-pam.c] rename the_authctxt to sshpam_authctxt in auth-pam.c
+   to reduce potential confusion with the one in sshd.c.  ok djm@
 
 20040327
  - (dtucker) [session.c] Bug #817: Clear loginmsg after fork to prevent
