--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040406
+ - (dtucker) [acconfig.h configure.ac defines.h] Bug #820: don't use
+   updwtmpx() on IRIX since it seems to clobber utmp.  ok djm@
+
 20040330
  - (dtucker) [configure.ac] Bug #811: Use "!" for LOCKED_PASSWD_PREFIX on
    Linuxes, since that's what many use.  ok djm@
