--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20040406
  - (dtucker) [acconfig.h configure.ac defines.h] Bug #820: don't use
    updwtmpx() on IRIX since it seems to clobber utmp.  ok djm@
+ - (dtucker) [configure.ac] Bug #816, #748 (again): Attempt to detect
+   broken getaddrinfo and friends on HP-UX.  ok djm@
 
 20040330
  - (dtucker) [configure.ac] Bug #811: Use "!" for LOCKED_PASSWD_PREFIX on
