--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    pty name on Linux 2.6.x systems.  Patch from jpe at eisenmenger.org.
  - (bal) [monitor.c monitor_wrap.c] Second try.  Put the zlib.h headers
    back and #undef TARGET_OS_MAC instead.  (Bug report pending with Apple)
+ - (dtucker) [defines.h loginrec.c] Define UT_LINESIZE if not defined and
+   simplify loginrec.c.  ok tim@
 
 20040407
  - (dtucker) [session.c] Flush stdout after displaying loginmsg.  From
