--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    back and #undef TARGET_OS_MAC instead.  (Bug report pending with Apple)
  - (dtucker) [defines.h loginrec.c] Define UT_LINESIZE if not defined and
    simplify loginrec.c.  ok tim@
+ - (bal) [monitor.c monitor_wrap.c] Ok.. Last time.  Promise.  Tim suggested
+   limiting scope and dtucker@ agreed.
 
 20040407
  - (dtucker) [session.c] Flush stdout after displaying loginmsg.  From
