--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20040412
  - (dtucker) [sshd_config.5] Add PermitRootLogin without-password warning
    from bug #701 (text from jfh at cise.ufl.edu).
+ - (dtucker) [acconfig.h configure.ac defines.h] Bug #673: check for 4-arg
+   skeychallenge(), eg on NetBSD.  ok mouring@
 
 20040408
  - (dtucker) [loginrec.c] Use UT_LINESIZE if available, prevents truncating
