--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040416
+ - (dtucker) [regress/sftp-cmds.sh] Skip quoting test on Cygwin, since
+   FAT/NTFS does not permit quotes in filenames.  From vinschen at redhat.com
+
 20040412
  - (dtucker) [sshd_config.5] Add PermitRootLogin without-password warning
    from bug #701 (text from jfh at cise.ufl.edu).
