--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
  - (djm) [auth-krb5.c auth.h session.c] Explicitly refer to Kerberos ccache 
    file using FILE: method, fixes problems on Mac OSX.
    Patch from simon@sxw.org.uk; ok dtucker@
+ - (tim) [configure.ac] Set SETEUID_BREAKS_SETUID, BROKEN_SETREUID and
+   BROKEN_SETREGID for SCO OpenServer 3
 
 20040412
  - (dtucker) [sshd_config.5] Add PermitRootLogin without-password warning
