--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20040418
+ - (dtucker) [auth-pam.c] Log username and source host for failed PAM
+   authentication attempts.  With & ok djm@
+
 20040416
  - (dtucker) [regress/sftp-cmds.sh] Skip quoting test on Cygwin, since
    FAT/NTFS does not permit quotes in filenames.  From vinschen at redhat.com
