--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
  - (djm) OpenBSD CVS Sync
    - henning@cvs.openbsd.org 2004/04/08 16:08:21
      [sshconnect2.c]
-     swap the last two parameters to TAILQ_FOREACH_REVERSE. matches what FreeBSD     and NetBSD do.
+     swap the last two parameters to TAILQ_FOREACH_REVERSE. matches what
+     FreeBSD and NetBSD do.
      ok millert@ mcbride@ markus@ ho@, checked to not affect ports by naddy@
    - djm@cvs.openbsd.org 2004/04/18 23:10:26
      [readconf.c readconf.h ssh-keysign.c ssh.c]
@@ -20,7 +21,8 @@
      [ssh.c]
      fix idiot typo that i introduced in my last commit;
      spotted by cschneid AT cschneid.com
- - (djm) [openbsd-compat/sys-queue.h] Sync with OpenBSD, needed for above change
+ - (djm) [openbsd-compat/sys-queue.h] Sync with OpenBSD, needed for 
+   above change
 
 20040419
  - (dtucker) OpenBSD CVS Sync
