--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20040423
+ - (dtucker) [configure.ac openbsd-compat/getrrsetbyname.c] Declare h_errno
+   as extern int if not already declared.  Fixes compile errors on old SCO
+   platforms.  ok tim@
+
 20040421
  - (djm) Update config.guess and config.sub to autoconf-2.59 versions; ok tim@
 
