--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,8 @@
    - dtucker@cvs.openbsd.org 2004/05/13 02:47:50
      [ssh-agent.1]
      Add examples to ssh-agent.1, bz#481 from Ralf Hauser; ok deraadt@
+ - (dtucker) [sshd.8] Bug #843: Add warning about PasswordAuthentication to
+   UsePAM section.  Parts from djm@ and jmc@.
 
 20040502
  - (dtucker) OpenBSD CVS Sync
