- (dtucker) [auth-pam.c scard-opensc.c] Tinderbox says auth-pam.c uses    readpass.h, grep says scard-opensc.c does too.  Replace with misc.h.

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,8 @@
      Add examples to ssh-agent.1, bz#481 from Ralf Hauser; ok deraadt@
  - (dtucker) [sshd.8] Bug #843: Add warning about PasswordAuthentication to
    UsePAM section.  Parts from djm@ and jmc@.
+ - (dtucker) [auth-pam.c scard-opensc.c] Tinderbox says auth-pam.c uses
+   readpass.h, grep says scard-opensc.c does too.  Replace with misc.h.
 
 20040502
  - (dtucker) OpenBSD CVS Sync
